---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 2021-03-30
  Changes:
    - Translations are now made on Crowdin via factorio-mods-localization.
  Bugfixes:
    - Fixed several localization issues.

---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 2021-03-10
  Bugfixes:
    - Fixed that the game wouldn't load without "Artisanal Reskins: Bob's Mods" (reskins-bobs).

---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2021-03-10
  Features:
    - Fix for the missing tooltip for the ingredient slot of the composter from Angel's Bio Processing.
  Changes:
    - Removed some stuff that was implemented in Sea Block 0.5.3 and Circuit Processing 0.4.1.
    - Changes made to the combinator recipes are disabled if Wire Shortcuts mod is active (thx Seraphendipity for the idea).
  Settings:
    - Added startup setting "Hide gold science pack", default true.
    - Changed "Long inserters 2 research" and "More inserters 2 research" from "Bob's Adjustable inserters mod" default to "true".
    - Changed "New accumulators", "Burner electric generator", "Fluid burning generator" and "New solar panels" from "Bob's Power mod" default to "true".
    - Removed changes to startup setting "Vehicle: Spidertron remote" from "Shortcuts for 1.1".
  Dependencies:
    - Removed dependency: KS_Power_quickfix, A Sea Block Config
    - Added dependency: KS_Power
    - Added optional dependency: reskins-compatibility and RecipeBook
    - Updated mod versions.
  Technologies:
    - Speed, efficiency and productivity modules 0 are dependent on modules lab.
    - Replaced gold science pack with automation, logistic, military and chemical science packs.
    - All alien science packs are now unlocked by "Outworld Biology Testing".
  Graphics: