@@ -7,43 +7,43 @@
   "contact": "ickputzdirwech@gmx.de",
   "homepage": "https://github.com/ickputzdirwech/SeaBlockCustomPack",
   "description": "Custom version of the Sea Block Pack. Other than the original mod pack this mod applies some small changes, mostly hiding unnecessary clutter and reordering stuff. All changes, including to dependencies, can be found in the description on the Factorio Mod Portal.",
-  "dependencies": ["base >= 1.1.30",
+  "dependencies": ["base >= 1.1.32",
     "angelsaddons-storage >= 0.0.4",
     "angelsbioprocessing >= 0.7.17",
     "angelspetrochem >= 0.9.17",
     "angelsrefining >= 0.11.19",
     "angelssmelting >= 0.6.14",
-    "bobassembly >= 1.1.2",
+    "bobassembly >= 1.1.3",
     "bobelectronics >= 1.1.3",
     "bobenemies >= 1.1.1",
     "bobequipment >= 1.1.2",
     "bobinserters >= 1.1.0",
-    "boblibrary >= 1.1.2",
-    "boblogistics >= 1.1.2",
-    "bobmining >= 1.1.1",
+    "boblibrary >= 1.1.3",
+    "boblogistics >= 1.1.3",
+    "bobmining >= 1.1.3",
     "bobmodules >= 1.1.2",
-    "bobores >= 1.1.0",
-    "bobplates >= 1.1.2",
-    "bobpower >= 1.1.1",
-    "bobrevamp >= 1.1.2",
-    "bobtech >= 1.1.2",
-    "bobwarfare >= 1.1.2",
+    "bobores >= 1.1.3",
+    "bobplates >= 1.1.3",
+    "bobpower >= 1.1.3",
+    "bobrevamp >= 1.1.3",
+    "bobtech >= 1.1.3",
+    "bobwarfare >= 1.1.3",
     "CircuitProcessing >= 0.4.1",
     "KS_Power >= 0.4.1",
     "ScienceCostTweakerM >= 1.1.6",
     "SeaBlock >= 0.5.3",
     "SpaceMod >= 1.1.0",
     "? baraws >= 1.1.1",
-    "? factoryplanner >= 1.1.19",
+    "? factoryplanner >= 1.1.20",
     "? flib >= 0.7.0",
-    "? FNEI >= 0.4.0",
+    "? FNEI >= 0.4.1",
     "? ModuleInserter >= 5.2.4",
     "? northifytool >= 1.1.2",
-    "? RecipeBook >= 2.5.2",
-    "? reskins-angels >= 1.1.3",
-    "? reskins-bobs >= 1.1.3",
-    "? reskins-compatibility >= 1.1.0",
-    "? reskins-library >= 1.1.3",
-    "? Shortcuts-ick >= 1.1.14",
+    "? RecipeBook >= 2.6.0",
+    "? reskins-angels >= 1.1.5",
+    "? reskins-bobs >= 1.1.7",
+    "? reskins-compatibility >= 1.1.2",
+    "? reskins-library >= 1.1.5",
+    "? Shortcuts-ick >= 1.1.16",
     "? Squeak Through >= 1.8.2"]
 }
